<resources>
    <string name="app_name">Agro</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_login">Register Now</string>
    <string name="logInView1">You\'ll receive an SMS shortly with the verification code</string>
    <string name="register_head">Registration</string>
    <string name="textView2">Already have an account?</string>
    <string name="textView5">Login now</string>
    <string name="signup">Signup now</string>
    <string name="button_registration">Login Now</string>
    <string name="login_head">Login</string>
    <string name="question">Don\'t have an account?</string>
    <string name="upload_head">Enter your details</string>
    <string name="button_details">Submit</string>
    <string name="editTextName">Enter your name</string>
    <string name="editTextPhone">Enter your phone number</string>
    <string name="logout">Sign out</string>
    <string name="edit_text">Edit profile</string>
    <string name="editText">Enter your phone number</string>
    <string name="phone_no">Enter your phone number</string>
    <string name="selectCrop">Select your crop</string>
    <string name="idTV4weeksDesc">Ideal soil and weather condition for your crop</string>
    <string name="idTV1Expand"><br><b>Ideal Soil\n</b></br><br>• Light soil is preferable.\n</br><br>• Good drainage, good porosity and bulk density.\n</br><br>• Slightly acidic nature , rich in organic carbon content and with high humus level\n</br><br><b>Ideal Weather\n</b></br><br>• Daytime temp(20-30°C) .\n</br><br>• Nighttime temp(10-15°C) .\n</br><br>• Ideally,warm,humid weather .\n</br></string>
    <string name="idTV2Expand"><br>• Apply 8-10 tons per acre of farmyard manure during field preparation.\n</br><br>• Apply 42kg per acre of urea 52kg per acre of DAP and 33kg of per acre of MOP 2 0r 3 days before transplanting.\n</br></string>
    <string name="idTV3Expand"><br>• plow the landwith soil turning and harrow 3-5 times to obtain a fine and loose tilth.Pepare the deal against the slope in oeder to improve soil drainage .\n</br></string>
    <string name="idTV4Expand"><br>• Seeds can be treated 24hr before sowing with antimicrobial or tungicidal powders or solutions e.g.-Trichoderma viride(4g-10g) per kg seed .\n</br><br>• Against fungal diseases: solutions containing thiram,captan or mancozeb (2.5g/kg seed) .\n</br><br>• Against Sucking insects: imidacloprid 600FS (5ml/kg seed) .\n</br></string>
    <string name="idTV5Expand"><br>1) Soak good quality seeds in warm water to soften them and speed germination.\n</br><br>2) While seeds are drying use a wooden teeth bars to mark seedbed soil 5cm apart and 0.5cm deep.\n</br><br>3) Dry seeds thoroughly and put 2-3 seeds per hole in seeded soil.\n</br><br>4) Cover the seeds lightly with soil from bed.\n</br><br>5) Water reasonably , add organic mulch if at hand to keep soil moist and at constant temperature.\n</br></string>
    <string name="idTV6Expand"><br>• Now irrigate the soil timely with sufficient water and remove unwanted weeds, add fertilizers and manures and pesticide if required.\n</br></string>
    <string name="idTV7Expand"><br>• Apply fertilizer pellete in the furrow and work them into soil.\n</br><br>• Do Irrigation if no rain expected to mix or embed fertilizer in soil deeply.\n</br><br>• Plan a foliar spray containing beran for e.g.borax(4g/l).\n</br><br>• In zinc deficient soil must be sure to apply Zinc for e.g.-zinc sulphate(5g/l).\n</br></string>
    <string name="idTV8Expand"><br>• Monitor your field for infected plants and post, and remove them and use pesticides accordingly\n</br></string>
    <string name="idTV9Expand"><br>• Fruits are picked normally at an interval of 4-5 days in summer and weekly intervals for winter.\n</br><br>• Harvesting is done with help of bulk pins.\n</br><br>• Fruits are packed into wide,shallow,stackable boxes. If they are already mature to avoid compression damage.\n</br><br>• Tomato should be picked during coolest part of day to avoid bruicins during picking process.\n</br></string>
    <string name="idTV10Expand"><br>• Storage room temp (15-20°C) (short term).\n</br><br>• Storage room temp (13°C) (long term).\n</br><br>• Good ventilation\n</br><br>• Efficient use of space.\n</br><br>• Good hygienic conditions.\n</br></string>
    <string name="idTV12Expand"><br>• All crop waste after harvest to avoid possible reintroduction of a disease  in same field .In case of pests,plow the land with soil turning to exposure the insect to predators and solar radiations.\n</br></string>
    <string name="idTTVTime"><br><b>Time</b></br><br>: 60 to 100 days.\n</br></string>
    <string name="idTTVClimate"><br><b>Climate</b></br><br>: warm and humid weather.\n</br><br>Daytime temp (20-30°C) \n</br><br>Night temp (10-15°C) \n</br></string>
    <string name="idTTVSoil"><br><b>Soil</b></br><br>: Well drained,sandy or red loam soil rich in organic matter.\n</br></string>
    <string name="idTTVPrice"><br><b>Price</b></br><br>: 1600/qtl around.\n</br></string>
    <string name="idTTVDesc"><br><b>Why it is preferable?\n</b></br><br>It is preferable because it price is more than 6 times of average agricultural price value in India. It has a global and growing market.</br></string>
    <string name="idBTVTime"><br><b>Time</b></br><br>: 60 to 100 days.\n</br></string>
    <string name="idBTVClimate"><br><b>Climate</b></br><br>: warm and humid weather.\n</br><br>Daytime temp (22-27°C) \n</br><br>Night temp (20-24°C) \n</br></string>
    <string name="idBTVSoil"><br><b>Soil</b></br><br>: Sandy and loamy soil pH (6-6.6).\n</br></string>
    <string name="idBTVPrice"><br><b>Price</b></br><br>: 3892/qtl around.\n</br></string>
    <string name="idBTVDesc"><br><b>Why it is preferable?\n</b></br><br>It is preferable because it price is more than 6 times of average agricultural price value in India. It has a global and growing market.</br></string>
    <string name="idBRTVTime"><br><b>Time</b></br><br>: 50 to 100 days.\n</br></string>
    <string name="idBRTVClimate"><br><b>Climate</b></br><br>: cool season.\n</br><br>Temperature (18-21°C) \n</br></string>
    <string name="idBRTVSoil"><br><b>Soil</b></br><br>: moistured soil.\n</br></string>
    <string name="idBRTVPrice"><br><b>Price</b></br><br>: 5000/qtl around.\n</br></string>
    <string name="idBRTVDesc"><br><b>Why it is preferable?\n</b></br><br>It is preferable because it price is more than 6 times of average agricultural price value in India. It has a global and growing market.</br></string>
    <string name="idCVTime"><br><b>Time</b></br><br>: 3 to 4 years.\n</br></string>
    <string name="idCTVClimate"><br><b>Climate</b></br><br>: warm condition with moderate rainfall.\n</br><br>Temperature (15-28°C) \n</br></string>
    <string name="idCTVSoil"><br><b>Soil</b></br><br>: laterite soil and sandy loam pH (6-6.6).\n</br></string>
    <string name="idCTVPrice"><br><b>Price</b></br><br>: 15150/qtl around.\n</br></string>
    <string name="idCTVDesc"><br><b>Why it is preferable?\n</b></br><br>It is preferable because it price is more than 6 times of average agricultural price value in India. It has a global and growing market.</br></string>
    <string name="idGTVTime"><br><b>Time</b></br><br>: 7 - 8 months.\n</br></string>
    <string name="idGTVClimate"><br><b>Climate</b></br><br>: cool and moist environment.\n</br><br>Temperature (12-18°C) \n</br></string>
    <string name="idGTVSoil"><br><b>Soil</b></br><br>: loamy soil with good drainage pH (6-7).\n</br></string>
    <string name="idGTVPrice"><br><b>Price</b></br><br>: 4431/qtl around.\n</br></string>
    <string name="idGTVDesc"><br><b>Why it is preferable?\n</b></br><br>It is preferable because it price is more than the average agricultural price value in India. It is required for both medical and eating purposes.</br></string>
    <string name="idGITVTime"><br><b>Time</b></br><br>: 210 to 240 Days.\n</br></string>
    <string name="idGITVClimate"><br><b>Climate</b></br><br>: warm and humid climate.\n</br><br>Temperature (20-25°C) \n</br></string>
    <string name="idGITVSoil"><br><b>Soil</b></br><br>: Sandy loam, Clay loam, red loam, lateritic loam soil.\n</br></string>
    <string name="idGITVPrice"><br><b>Price</b></br><br>: 4854/qtl around.\n</br></string>
    <string name="idGITVDesc"><br><b>Why it is preferable?\n</b></br><br>It is preferable because it price is more than the average agricultural price value in India. It is required for both medical and eating purposes.</br></string>
    <string name="idLTVTime"><br><b>Time</b></br><br>: 2 to 3 Months.\n</br></string>
    <string name="idLTVClimate"><br><b>Climate</b></br><br>: cool winters and cool summers.\n</br><br>Temperature (20-30°C) \n</br></string>
    <string name="idLTVSoil"><br><b>Soil</b></br><br>: dry or moderately fertile soil pH (6.7-7.3).\n</br></string>
    <string name="idLTVPrice"><br><b>Price</b></br><br>: 1,20,000/qtl around.\n</br></string>
    <string name="idLTVDesc"><br><b>Why it is preferable?\n</b></br><br>It is preferable because it price is more than 6 times of average agricultural price value in India. It has a global and growing market.</br></string>
    <string name="idLETVTime"><br><b>Time</b></br><br>: 6 to 8 Weeks.\n</br></string>
    <string name="idLETVClimate"><br><b>Climate</b></br><br>: cool climate with appropriate sunlight.\n</br><br>Temperature (18-22°C) \n</br></string>
    <string name="idLETVSoil"><br><b>Soil</b></br><br>: loose and well drained soil.\n</br></string>
    <string name="idLETVPrice"><br><b>Price</b></br><br>: 10,000/qtl around.\n</br></string>
    <string name="idLETVDesc"><br><b>Why it is preferable?\n</b></br><br>It is preferable because it price is more than 6 times of average agricultural price value in India. It has a global and growing market.</br></string>
    <string name="idSTVTime"><br><b>Time</b></br><br>: 12 to 18 Months.\n</br></string>
    <string name="idSTVClimate"><br><b>Climate</b></br><br>: Hot and humid climate.\n</br><br>Temperature (21-27°C) \n</br></string>
    <string name="idSTVSoil"><br><b>Soil</b></br><br>: Rich alluvial soil, lava soil, heavy soil, with good drainage.\n</br></string>
    <string name="idSTVPrice"><br><b>Price</b></br><br>: 305/qtl around.\n</br></string>
    <string name="idSTVDesc"><br><b>Why it is preferable?\n</b></br><br>It is preferable because it price is more than 2 times of average agricultural price value in India. It has a global and growing market.</br></string>
    <string name="idSNTVTime"><br><b>Time</b></br><br>: 18 to 20 Months.\n</br></string>
    <string name="idSNTVClimate"><br><b>Climate</b></br><br>: Warm and humid climate.\n</br><br>Annual rainfall 100cm.\n</br><br>Temperature (12-15°C) \n</br></string>
    <string name="idSNTVSoil"><br><b>Soil</b></br><br>: Alluvial, Moutain, Laterite, well drained soil with high amount of organic matter pH (4.5 - 5.5).\n</br></string>
    <string name="idSNTVPrice"><br><b>Price</b></br><br>: 16000/qtl around.\n</br></string>
    <string name="idSNTVDesc"><br><b>Why it is preferable?\n</b></br><br>It is preferable because it price is more than 2 times of average agricultural price value in India. It has a global and growing market.</br></string>
</resources>