<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tomato">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/tomato" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="TOMATO"
        android:textStyle="bold"
        android:textSize="25dp"
        android:layout_below="@+id/imageView4"
        android:layout_centerHorizontal="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />
    <androidx.cardview.widget.CardView
        android:id="@+id/card14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="10dp"
        app:cardUseCompatPadding="true"
        app:cardElevation="11dp"
        app:cardCornerRadius="15dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">
            <TextView
                android:id="@+id/idTTVTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/idTTVTime"
                android:textSize="20sp"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/idTTVClimate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/idTTVClimate"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_below="@+id/idTTVTime"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/idTTVSoil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/idTTVSoil"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_below="@id/idTTVClimate"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/idTTVPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/idTTVPrice"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_below="@+id/idTTVSoil"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/idTTVDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/idTTVDesc"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_below="@+id/idTTVPrice"
                android:textAlignment="center"/>




        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
</ScrollView>