<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Lettuce">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_centerHorizontal="true"
            app:srcCompat="@drawable/lettuce" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="LETTUCE"
            android:textStyle="bold"
            android:textSize="25dp"
            android:layout_below="@+id/imageView4"
            android:layout_centerHorizontal="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />
        <androidx.cardview.widget.CardView
            android:id="@+id/card14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView4"
            android:layout_marginTop="10dp"
            app:cardUseCompatPadding="true"
            app:cardElevation="11dp"
            app:cardCornerRadius="15dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">
                <TextView
                    android:id="@+id/idLETVTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/idLETVTime"
                    android:textSize="20sp"
                    android:textAlignment="center"/>
                <TextView
                    android:id="@+id/idLETVClimate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/idLETVClimate"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_below="@+id/idLETVTime"
                    android:textAlignment="center"/>
                <TextView
                    android:id="@+id/idLETVSoil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/idLETVSoil"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_below="@id/idLETVClimate"
                    android:textAlignment="center"/>
                <TextView
                    android:id="@+id/idLETVPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/idLETVPrice"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_below="@+id/idLETVSoil"
                    android:textAlignment="center"/>
                <TextView
                    android:id="@+id/idLETVDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/idLETVDesc"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_below="@+id/idLETVPrice"
                    android:textAlignment="center"/>




            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</ScrollView>